src/test/deca/context/valid/print_var.deca
// Description :
// test de l'affichage d'une variable
//
// Résultats :
// ok

{
  int x = 2;
  println(x);
}
