src/test/deca/context/invalid/types_incompatibles_int_null.deca
// Description :
// test de l'affectation de types différents incompatibles
//
// Résultats :
// Erreur contextuelle
// Ligne 10 : Affectation à un objet de type int une valeur de type null impossible (règle 3.28)

{
  int i;
  i = null;
}
